--- a/WebAPI/packages.config
+++ b/WebAPI/packages.config
@@ -29,7 +29,11 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
@@ -37,5 +41,7 @@
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net45" />
 </packages>
